# Vulkan

./: .gitignore  CMakeLists.txt  flake.nix  result-opencl  test_cl  test_cl.cpp
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: fi4kf9pydb16h80734ybf5p2l8rv8frb-source  ld74liqfaw99jc5pfq0z3nfp1wgf17m5-source  pmj10jdwkcz6hj5yfjw6q2ds7b3hy9qx-source  (+3 more)
android/: AndroidManifest.xml  build.gradle  resources.arsc
android/examples/gltfscenerendering_client/: .gitignore  CMakeLists.txt  build.gradle
android/examples/gltfscenerendering_client/src/main/: AndroidManifest.xml
android/examples/gltfscenerendering_client/src/main/java/de/saschawillems/vulkanSample/: VulkanActivity.java
base/: VulkanAndroid.cpp  VulkanAndroid.h  VulkanDevice.cpp  vulkanexamplebase.cpp  vulkanexamplebase.h
examples/: CLIENTDATA.tsv  CLIENTDATA_2400x1080x4.tsv  CLIENTDATA_320x240.tsv  CLIENTDATA_320x240x4.tsv  CLIENTDATA_480x272.tsv  CLIENTDATA_480x272x4.tsv  CLIENTDATA_512x512.tsv  CMakeLists.txt  DATA.tsv  DATA_480x272.tsv  DATA_512x512.tsv  DATA_fullserver.tsv  SERVERDATA.tsv  SERVERDATA_2400x1080x4.tsv  SERVERDATA_320x240.tsv  SERVERDATA_320x240x4.tsv  SERVERDATA_480x272.tsv  SERVERDATA_480x272x4.tsv  SERVERDATA_512x512.tsv  imgui.ini  log  makedump.txt  righteyemaybe.ppm  tCLIENTDATA.tsv  tSERVERDATA.tsv  tmpserver0.ppm  tmpserver1.ppm  tmpserver_mp.ppm 1.ppm  tmpserver_p.ppm 2.ppm  tmpserver_tmp.ppm 0.ppm  tmpserver_tmpserver 1.ppm  tmpserver_tmpserver 2.ppm  vkvia.html
(+303 files in other folders)
